completed Our Features Section

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,7 +6,10 @@
 		padding-right: -65px;
 	}
 
-	
+	&--gutters-large {
+		padding-right: -100px;
+	}
+    
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
 	}
@@ -16,6 +19,11 @@
         &--gutters > div {
 		padding-right: 65px;
 	}
+        &--gutters-large > div {
+		padding-right: 50px;
+        padding-left: 50px
+	}
+
 
 		&__b-margin-until-medium {
 		margin-bottom: 0;
@@ -30,6 +38,11 @@
 		&__medium-4--larger { 
 			width: 37%;
 		}
+        
+        &__medium-6 {
+            float:left;
+            width: 50%;
+        }
 
 		&__medium-8 {
 			float: left;
