--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,6 +1,10 @@
 .row {
 
 	@mixin clearfix;
+    
+    &--t-padding {
+        padding-top: 80px;
+    }
 
 	&--gutters {
 		padding-right: -65px;
@@ -10,21 +14,30 @@
 		padding-right: -100px;
 	}
     
+    &--gutters-small {
+        margin-right: -45px;   
+    }
+    
+    &--gutters > div {
+		padding-right: 65px;
+	}
+    
+    &--gutters-large > div {
+		padding-right: 100px;
+
+	}
+    
+    &--gutters-small > div {
+		padding-right: 45px;
+	}
+    
+    
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
 	}
 
 	@mixin atMedium {
         
-        &--gutters > div {
-		padding-right: 65px;
-	}
-        &--gutters-large > div {
-		padding-right: 50px;
-        padding-left: 50px
-	}
-
-
 		&__b-margin-until-medium {
 		margin-bottom: 0;
 		}
@@ -53,4 +66,62 @@
 			width: 63%;
 		}
 	}	
+    @mixin atLarge {
+        
+		&__b-margin-until-large {
+		margin-bottom: 0;
+		}
+
+
+		&__large-4 {
+			float: left;
+			width: 33.33%;
+		}
+
+		&__large-4--larger { 
+			width: 37%;
+		}
+        
+        &__large-6 {
+            float:left;
+            width: 50%;
+        }
+
+		&__large-8 {
+			float: left;
+			width: 66.66%;
+		}
+
+		&__large-8--smaller { 
+			width: 63%;
+		}
+	}	
+/*
+    Begin Equal Height Rules
+*/
+    
+    &--equal-height-at-medium {
+        @mixin atMedium {
+            display: flex;
+        }
+        
+        & > div {
+            float: none;
+            display: flex;
+
+        }
+    }
+    
+     &--equal-height-at-large {
+        @mixin atLarge {
+            display: flex;
+        }
+        
+        & > div {
+            float: none;
+            display: flex;
+
+        }
+    }
+    
 }
