--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -6,6 +6,26 @@
     margin-right: auto;
     overflow: hidden;
 
+    &--no-padding-until-medium {
+        padding-left: 0;
+        padding-right: 0;
+        
+        @mixin atMedium {
+            padding-left: 18px;
+            padding-right: 18px;
+        }
+    }
+    
+    &--no-padding-until-large {
+        padding-left: 0;
+        padding-right: 0;
+        
+        @mixin atLarge {
+            padding-left: 18px;
+            padding-right: 18px;
+        }
+    }
+    
     &--medium {
     	max-width: 976px;
     }
@@ -20,7 +40,7 @@
     	margin-bottom: 1rem;
 
     	@mixin atSmall{
-    	margin-bottom: 3.875rem;
+    	    margin-bottom: 3.875rem;
     	}
     }
 }
