--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -9,10 +9,15 @@
     }
     @mixin atMedium {
         background-color: rgba($mainBlue, .3);
+        position: fixed;
+        
+        &--dark {
+            background-color: rgba(23, 51, 72, .85);
+        }
     }
     &__btn-container {
         @mixin atMedium {
-            float: right;
+            float: right; 
         }
     }
     &__logo {
@@ -23,9 +28,14 @@
         transform-origin: 50% 0;
         background-color: $mainBlue;
         padding: 25px 36px;
+        transition: transform .3s ease-out;
         @mixin atMedium {
             left: auto;
             transform: translateX(0);
+            
+            .site-header--dark & {
+                transform: scale(.57);
+            }
         }
     }
     &__logo__graphic {
