--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -29,6 +29,10 @@
     &--medium {
     	max-width: 976px;
     }
+    
+    &--narrow {
+        max-width: 470px;
+    }
 
     .wrapper {
     	padding-left: 0; 
