--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -100,10 +100,10 @@
     Begin Equal Height Rules
 */
     
-    &--equal-height-at-medium {
+    .flexbox &--equal-height-at-medium {
         @mixin atMedium {
             display: flex;
-        }
+        } 
         
         & > div {
             float: none;
@@ -112,7 +112,7 @@
         }
     }
     
-     &--equal-height-at-large {
+     .flexbox &--equal-height-at-large {
         @mixin atLarge {
             display: flex;
         }
